# routers/router.go
@@ -8,12 +8,16 @@ import (
 )
 
 // InitRouters func
-func InitRouters() {
+func init() {
 	r := gin.Default()
 	r.Use(cors.Default())
 	r.GET("", func(c *gin.Context) {
 		c.String(http.StatusOK, "Go service is running!")
 	})
+	apiFile := r.Group("/api/upload")
+	{
+		apiFile.POST("/file", Uploadfile)
+	}
 	apiUsers := r.Group("/api/user")
 	{
 		apiUsers.GET("", GetUserByID)
@@ -22,5 +26,6 @@ func InitRouters() {
 		apiUsers.PUT("", PutUserByID)
 		apiUsers.DELETE("", DeleteUserByID)
 	}
+
 	r.Run()
 }
